[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,29 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://pbs.twimg.com/profile_images/490131803584225280/i3kC9zW_.jpeg" class="img-medium"/>
         </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am Suhit Kumar.
+        <hr/>
+        <h3>Personal</h3>
+        <div>
+            My name is Sumit kumar.
+        </div>
+        <hr/>
+        <h4>Profssional</h4>
+        <div>
+            I study at National Institute of techonology jalandhar.
+        </div>
+        <hr/>
+        <div class="footer">
+            This button <button id="counter">Click me!</button> has been clicked <span id="count">0</span> times.
+            <hr/>
+            <input type="text" id="name" placeholder="name">
+            <input type="submit" value="submit" id="submit_btn"> 
+            <ul id="namelist">
+            </ul>
+        </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
