[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,12 +6,12 @@
     <body>
         <div class="container">
         <div class="center">
-            <img src="https://pbs.twimg.com/profile_images/490131803584225280/i3kC9zW_.jpeg" class="img-medium"/>
+            <img src="C:\Users\sumitk121\Desktop/16.jpg" class="img-medium"/>
         </div>
         <hr/>
         <h3>Personal</h3>
         <div>
-            My name is Sumit kumar.
+            My name is Suhit kumar.
         </div>
         <hr/>
         <h4>Profssional</h4>
