--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
         <div class="center">
-            <img src="C:\Users\sumitk121\Desktop/16.jpg" class="img-medium"/>
+            <img src="16.jpg" class="img-medium"/>
         </div>
         <hr/>
         <h3>Personal</h3>
